Bug 1553781: When the remote service finds an instance to remote to it doesn't clean up the startup lock. r=glandium

This fixes the issue in a few redundant ways:
* nsProfileLock is made to properly clean itself up when destroyed.
* nsRemoteService makes sure the unlock when destroyed.
* nsAppRunner unlocks when a remote client has been found.

Differential Revision: https://phabricator.services.mozilla.com/D32360